2009-11-18  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyTriggerEvent.cc: Always create an HLT trigger
	collection. Even an empty one. It is needed to correctly filter
	events on the client side.
	* BuildFile: Link DataFormats/RPCRecHit to avoid problems with
	data dictionary.
	* ispy_BeamSplash_server_cfg.py, ispy_33X_server_cfg.py,
	ispy_33X_proxy_server_cfg.py: More examples on how to use iSpy
	producers. 

2009-11-17  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyService.h, ISpyService.cc: Allow closing of ig files by
	elapsed time.

2009-11-12  Ianna Osborne  <ianna.osborne@cern.ch>

	* python/ispy_33X_cfg.py: Update to use data from a CMSSW_3_3_2
	release.

2009-11-05  Ianna Osborne  <ianna.osborne@cern.ch>

	* ISpyL1GlobalTriggerReadoutRecord.cc: Add technical trigger
	word.

2009-11-04 Tom McCauley <thomas.mccauley@cern.ch>

	* ISpyMuon.cc, ISpyPATMuon.cc: fix cast problem w/charge

2009-10-09 Tom McCauley <thomas.mccauley@cern.ch>

	* VisTriggerEvent.cc: add more information and 
	fix iteration over trigger objects

2009-10-07 Tom McCauley <thomas.mccauley@cern.ch>

	* VisSuperCluster: add rec hit fractions
	* VisCaloCluster: add (to replace VisBasicCluster)
	* VisPreshowerCluster: add
	* VisE*RecHit: add writing to Products_V1
	
2009-10-06  Ianna Osborne  <ianna.osborne@cern.ch>

	* *.h, *.cc, BuildFile, MakeVisAnalyzer.py: Migrated from
	VisReco/Analyzer. Paths updated. Systematically removed Iguana,
	not to confuse both packages. Vis* renamed to ISpy*.
	* python/ISpy*.py: Former Vis*.py renamed.
	* ISpyService.h, ISpyService.cc: Former IguanaService.h,
	IguanaService.cc renamed. All related classes updated.
	* ISpyNetProducer.h: Former IguanaNetProducer.h renamed.
	* .admin/developers: Migrated from VisReco/Analyzer.
	
2009-10-05 Tom McCauley <thomas.mccauley@cern.ch>

	* VisSuperCluster: add

2009-10-01 Tom McCauley <thomas.mccauley@cern.ch>

	* ispy_33X_cfg.py: add

2009-10-01 Tom McCauley <thomas.mccauley@cern.ch>
